# leetcode

./: CMakeLists.txt  README.md  skrypt.sh
firstday/: README.md  c2.cpp  c3.cpp
scripts/: fibo.cpp  fibonacci.cpp  fibonacci.h
tests/: CMakeLists.txt  unit_fibo.cpp
